proj1/tests/other-tests/MINZ_tests/error/redirect_print_error.py
x = 1
print x >> redirect_print_error.py